--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,8 @@ html {
 }
 
 body {
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, monospace;
   margin: 0;
   padding: 0;
   min-height: 100vh;
@@ -19,6 +20,9 @@ optgroup,
 select,
 textarea {
   font-family: inherit;
+  color: inherit;
+  font-size: inherit;
+  font-weight: inherit;
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
